# password-manager-in-rust

./: Cargo.toml  README.md
src/: db.rs  main.rs
